
Version 3.04  2011-11-12
 * bug fixed: duplicate files only save one entry ok
 * bug fixed: sync correctly with more binlog files
 
Version 3.03  2011-10-16
 * ignore existed link when sync link file
 * http token checking support persistent token
 * add functions: storage_file_exist and storage_file_exist1
 * php minfo add fastdfs version info
 * make.sh changed
 * client move libevent dependency

Version 3.02  2011-09-18
 * bug fixed: tracker_mem_check_add_tracker_servers add tracker server 
   correctly
 * php client compile ok with php 5.2.17
 * re-select trunk server ok

Version 3.01  2011-07-31
 * bug fixed: tracker_get_connection_ex and tracker_get_connection_r_ex 
   connect two times with multi tracker servers
 * bug fixed: tracker_mem_check_add_tracker_servers condition not correct
 * all logError add source filename and line
 * php extension support upload file callback
 * php extension support download file callback

Version 3.00  2011-06-19
 * mass small files optimization
 * add fixed block memory pool: common/fast_mblock.c
 * bug fixed: tracker_mem.c do NOT clear g_groups fields
 * bug fixed: slave file and appender file download ok
 * bug fixed: tracker / storage run by group / user, set file owner
 * tracker server support leader
 * client support static library
 * client_func.h add functions fdfs_tracker_group_equals and 
   fdfs_get_file_ext_name
 * bug fixed: test/dfs_func_pc.c compile ok
 * storage server check free space enough when upload a file

Version 2.09  2011-02-19
 * bug fixed: write_to_binlog_index then increase g_binlog_index (feedback 
   by koolcoy)
 * disk read / write supports direct mode (avoid caching by the file system)

Version 2.08  2011-01-30
 * bug fixed: fdfs_trackerd.c set g_tracker_thread_count to 0
 * add cmd TRACKER_PROTO_CMD_SERVER_LIST_ONE_GROUP to support list one group
 * support disk recovery automatically
 * support total_upload_bytes, success_upload_bytes, total_download_bytes and 