@@ -2,7 +2,8 @@
 Version 3.04  2011-11-12
  * bug fixed: duplicate files only save one entry ok
  * bug fixed: sync correctly with more binlog files
- 
+ * fdfs_file_info query file info from storage server
+
 Version 3.03  2011-10-16
  * ignore existed link when sync link file
  * http token checking support persistent token
